--- a/test/fixtures/texts.yml
+++ b/test/fixtures/texts.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  index: 1
-  group: 1
+  student_id: 1
+  field_id: 1
+  content: MyString
 
 two:
-  name: MyString
-  index: 1
-  group: 1
+  student_id: 1
+  field_id: 1
+  content: MyString
