Added combo box options and specific field lookup on student

--- a/test/fixtures/fields.yml
+++ b/test/fixtures/fields.yml
@@ -4,8 +4,12 @@ one:
   name: MyString
   index: 1
   group: 1
+  description: MyString
+  options: MyString
 
 two:
   name: MyString
   index: 1
   group: 1
+  description: MyString
+  options: MyString
