Added groups for fields, started working on complete student information page

--- a/test/fixtures/fields.yml
+++ b/test/fixtures/fields.yml
@@ -3,13 +3,13 @@
 one:
   name: MyString
   index: 1
-  group: 1
+  group_id: 1
   description: MyString
   options: MyString
 
 two:
   name: MyString
   index: 1
-  group: 1
+  group_id: 1
   description: MyString
   options: MyString
