--- a/test/fixtures/fields.yml
+++ b/test/fixtures/fields.yml
@@ -6,6 +6,7 @@ one:
   group_id: 1
   description: MyString
   options: MyString
+  hidden: false
 
 two:
   name: MyString
@@ -13,3 +14,4 @@ two:
   group_id: 1
   description: MyString
   options: MyString
+  hidden: false
