--- a/config/database.yml
+++ b/config/database.yml
@@ -10,10 +10,10 @@
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 #
 default: &default
-  adapter: mysql
-  encoding: utf8
+  adapter: postgresql
+  encoding: unicode
   pool: 5
-  username: root
+  username: nathan
   password:
   host: localhost
 
