working on favorite display, season is mostly ready

--- a/test/fixtures/favorites.yml
+++ b/test/fixtures/favorites.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user_id: 
-  type: 
-  index: 1
+  user_id: 1
+  dest_id: 1
+  dest_type: 1
 
 two:
-  user_id: 
-  type: 
-  index: 1
+  user_id: 1
+  dest_id: 1
+  dest_type: 1
